--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   meta: ^1.12.0
   google_sign_in: ^6.2.1
   flutter_facebook_auth: ^7.0.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
